syntax = "proto3";

package cacheserver.v1;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

option go_package = "cacheserver/api/cacheserver/v1;v1";

message SetRequest {
  string namespace = 1;
  string key = 2;
  google.protobuf.Any value = 3;
  optional google.protobuf.Duration expire = 4;
}

message DelRequest {
  string namespace = 1;
  string key = 2;
}

message GetRequest {
  string namespace = 1;
  string key = 2;
}

message GetResponse {
  google.protobuf.Any value = 1;
  google.protobuf.Duration expire = 2;
}
